Fix Links and contrast

--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -12,6 +12,7 @@
   letter-spacing: 0.37px;
   font-weight: bold; 
   margin-top: 100px; 
+  color:#252525;
 }
 
 .form{
