--- a/src/Components/Projects.css
+++ b/src/Components/Projects.css
@@ -108,6 +108,7 @@
   text-align: center;
   display: inline-block;
   cursor: pointer;
+  text-decoration: none;
 }
 
 @media only screen and (max-width: 740px){
